--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
       </header>
       <section>
         <h3>
+<a id="curriculum-triviae" class="anchor" href="#curriculum-triviae" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Curriculum Triviae.</h3>
+
+<p>You can see my video game resume <a href="/cv/index.html">here</a>.</p>
+
+<h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
